# CoreEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Core/: Application.cpp  Application.h  CMakeLists.txt  Core.h  EntryPoint.h  Macros.h  Window.h
Core/Events/: CMakeLists.txt  Event.cpp  Event.h  EventDispatcher.h  IEventListener.h  KeyEvent.cpp  KeyEvent.h  MouseEvent.cpp  MouseEvent.h  WindowEvent.cpp  WindowEvent.h
Core/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
Core/Input/: Input.cpp  Input.h  Keycodes.h
Core/Layers/: Layer.cpp  Layer.h  LayerHandler.cpp  LayerHandler.h
Core/Log/: CMakeLists.txt  Logger.cpp  Logger.h
Core/Maths/: CMakeLists.txt  Quaternion.cpp  Quaternion.h  mat4.cpp  mat4.h  maths.h  maths_func.h  tvec2.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
Core/Platform/: Window.h  WindowsWindow.cpp  WindowsWindow.h
Core/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h
Core/Renderer/: GraphicsContext.h  Shader.cpp  Shader.h
Dependencies/: CMakeLists.txt
Dependencies/glad/: CMakeLists.txt
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
Dependencies/imgui/: CMakeLists.txt
Game/: CMakeLists.txt  Sandbox.cpp
Yugen/: Application.cpp  Application.h  CMakeLists.txt  EntryPoint.h  Macros.h
Yugen/ECS/: ComponentArray.h  ComponentManager.h  EcsMananger.h  EntityManager.h  SystemManager.h
Yugen/Events/: CMakeLists.txt  Event.cpp  Event.h  EventDispatcher.h  IEventListener.h  KeyEvent.cpp  KeyEvent.h  MouseEvent.cpp  MouseEvent.h  WindowEvent.cpp  WindowEvent.h
Yugen/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  imgui_impl_opengl3.cpp
Yugen/Input/: Input.cpp  Input.h  Keycodes.h
Yugen/Layers/: Layer.cpp  Layer.h  LayerHandler.cpp  LayerHandler.h
Yugen/Platform/: Window.h  WindowsWindow.cpp  WindowsWindow.h
Yugen/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Yugen/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
cmake/: HunterGate.cmake
cmake/Hunter/: config.cmake
